# design-pattern

./: .clang-format  .gitignore  LICENSE  README.md
factory/: CMakeLists.txt  animal.h  animal_factory.h  cat.cc  cat.h  dog.cc  dog.h  test.cc  xmake.lua
graph/: graph.h  node.h  op_desc.h  shape.cc  shape.h  var_desc.h
prototype/: phone.h  prototype.h
